--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity
             android:name=".Activities.RestaurantActivity"
+            android:theme="@style/RestaurantTheme"
             android:label="@string/chosen_restaurant"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateAlwaysHidden">
