--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".Activities.RestaurantActivity"
             android:theme="@style/RestaurantTheme"
-            android:label="@string/chosen_restaurant"
+            android:label="@string/restaurant_view"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
