--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.randomappsinc.foodbutton"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 230
-        versionName "2.3.0"
+        versionCode 231
+        versionName "2.3.1"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -38,8 +38,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.1'
+    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.android.support:support-v13:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:percent:23.3.0'
 }
