Favorites filter look

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,5 +61,10 @@
             android:label="@string/filters"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".Activities.FavoritesFilterActivity"
+            android:label="@string/filters"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 </manifest>
