--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,5 +66,9 @@
             android:label="@string/filters"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".Activities.OptionsActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 </manifest>
