--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.randomappsinc.foodbutton"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 280
-        versionName "2.8.0"
+        versionCode 290
+        versionName "2.9.0"
     }
     buildTypes {
         release {
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.android.support:support-v13:24.2.1'
     compile 'com.android.support:percent:24.2.1'
     compile 'io.nlopez.smartlocation:library:3.2.4'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
