--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data tools:replace="android:value"
+        <meta-data
+            tools:replace="android:value"
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
 
@@ -31,8 +32,7 @@
         </activity>
         <activity
             android:name=".Activities.SuggestionsActivity"
-            android:label="@string/restaurant_view"
-            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/restaurant"
             android:screenOrientation="portrait">
         </activity>
         <activity
@@ -53,7 +53,7 @@
         </activity>
         <activity
             android:name=".Activities.RestaurantActivity"
-            android:label="@string/restaurant_view"
+            android:label="@string/restaurant"
             android:screenOrientation="portrait">
         </activity>
         <activity
