--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.randomappsinc.foodbutton"
         minSdkVersion 16
-        targetSdkVersion 24
-        versionCode 295
-        versionName "2.9.5"
+        targetSdkVersion 25
+        versionCode 300
+        versionName "3.0.0"
     }
     buildTypes {
         release {
@@ -21,24 +21,33 @@ android {
     lintOptions {
         disable "ResourceType"
     }
+    packagingOptions {
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/notice'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license'
+        exclude 'META-INF/license.txt'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.2'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
-    compile 'com.github.rey5137:material:1.2.2'
-    compile 'com.android.support:support-v13:24.2.1'
-    compile 'com.android.support:percent:24.2.1'
+    compile 'com.github.rey5137:material:1.2.4'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:percent:25.3.1'
     compile 'io.nlopez.smartlocation:library:3.2.4'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:animated-vector-drawable:25.3.1'
+    compile 'io.github.ranga543:yelp-fusion-client:0.1.2'
 }
