--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.android.support:cardview-v7:26.0.1'
     compile 'com.android.support:animated-vector-drawable:26.0.1'
-    compile 'io.github.ranga543:yelp-fusion-client:0.1.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
