--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.randomappsinc.foodbutton"
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 302
-        versionName "3.0.2"
+        targetSdkVersion 30
+        versionCode 303
+        versionName "3.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -19,25 +18,40 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:design:26.0.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.7'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
-    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
-    compile 'com.github.rey5137:material:1.2.4'
-    compile 'com.android.support:support-v13:26.0.1'
-    compile 'com.android.support:percent:26.0.1'
-    compile 'io.nlopez.smartlocation:library:3.2.4'
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    compile 'com.android.support:cardview-v7:26.0.1'
-    compile 'com.android.support:animated-vector-drawable:26.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton:butterknife:10.2.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
+    implementation ('com.afollestad.material-dialogs:core:0.9.6.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.squareup.picasso:picasso:2.71828') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.joanzapata.iconify:android-iconify-ionicons:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.joanzapata.iconify:android-iconify-fontawesome:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.github.rey5137:material:1.2.4') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('io.nlopez.smartlocation:library:3.2.4') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.baoyz.swipemenulistview:library:1.3.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
