--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'io.realm:realm-gradle-plugin:3.7.2'
 
         // NOTE: Do not place your application dependencies here; they belong
